--- a/04-trigonometric.Rmd
+++ b/04-trigonometric.Rmd
@@ -1,104 +1,155 @@
-# Trigonometric Functions
 
-## Angles
+# Differentiation
 
-**Definition** An angle is formed by rotating a ray about its endpoint. It is uniquely determined by the direction and magnitude of rotation.
+Note that *an italic title* indicates an application section which is less important than a theoretical one.
 
-- The initial position of the ray is called the *initial side*.
+## Notes {-}
 
-- The endpoint of the ray is called the *vertex*.
+**Formula for slope** Suppose a curve $C$ is given by $y=f(x)$, where $f$ is a function; and a point $P(x_0;f(x_0))$ is on $C$. For any point $Q$ on $C$ with $Q\neq P$, its $x$-coordinate can be written as $x_0+h$ where $h\neq 0$ (if $h>0$, $Q$ is on the right of $P$; if $h<0$, Q is on the left of $P$). Thus, $Q$ can be written as $(x_0+h,f(x_0+h))$. The slope $m_{PQ}$ of the *secant line* $PQ$ is
+$$m_{PQ}=\frac{f(x_0+h)-f(x_0)}{(x_0+h)-x_0}=\frac{f(x_0+h)-f(x_0)}{h}$$
+Note that as $Q$ approaches $P$, the number $h$ approaches $0$. From these, we see that the slope of $C$ at $P$ (denoted by $m_p$) is 
 
-- The final position is called the *terminal side*.
+\begin{equation}
+m_p=\underset{h\rightarrow\infty}{\lim}\frac{f(x_0+h)-f(x_0)}{h} (\#eq:mp)
+\end{equation}
+provided that the limit exists.
 
-- The direction of rotation may be counterclockwise or clockwise which will be considered to be positive or negative, respectively.
+```{r,echo=FALSE,out.width="30%",fig.align = 'center'}
+knitr::opts_chunk$set(fig.pos = "!H", out.extra = "")
+knitr::include_graphics("./plots/2/slope.png")
+```
 
-- Magnitudes of rotation are traditionally measured in degrees or in radians.
+**Example** Find the slope of the curve $y=x^2$ at the point $P(3,9)$.
 
-**Terminology** A circle with radius 1 is called a unit circle. The circle with radius 1 and center at the origin is called the unit circle.
+**Definition** Let $x_0$ be a real number and let $f$ be a function defined on an open interval containing $x_0$. Suppose the limit in \@ref(eq:mp) exists. Then we say that $f$ is **differentiable** at $x_0$.
 
-**Definition** The angle determined by an arc of length 1 along the circumference of a unit circle is said to be of measure one radian.
+**Example** Let $f(x)=|x|$. The domain of $f$ is $\mathbb{R}$. The function $f$ is continuous at $0$. However it is not differentiable at $0$.
 
-- $360^\circ=2\pi$
+**Definition** Let $f$ be a function that is differentiable at some points belonging in its domain. Then the **derivative** of $f$, denoted by $f'$, is the function (from a subset of $\text{dom}(f)$ into $\mathbb{R}$) given by
+$$f'(x)=\underset{h\rightarrow\infty}{\lim}\frac{f(x+h)-f(x)}{h}$$
+where the domain of $f'$ is $\{x\in\text{dom}(f):\underset{h\rightarrow\infty}{\lim}\frac{f(x+h)-f(x)}{h}~~ \text{exits} \}$
 
-- $d^\circ=d\times\frac{\pi}{180}$ radians
+**Example** Find the derivative of $f(x)=|x|$.
 
-- $90^\circ=\frac{\pi}{2}, 60^\circ=\frac{\pi}{3}$
+**Example** Find the derivative of $f(x)=x^2$.
 
-**Remark** It is more convenient to consider angles in radians and the unit radian is usually omitted.
+**Example** Find the derivative of $f(x)=x^3$.
 
-## Trigonometric Functions
+**Notation**
 
-**Notation** Consider an angle $\theta$ in standard position. Let $P$ be the point of intersection of the terminal side and the unit circle. We define sine and cosine functions from $\mathbb{R}$ to $\mathbb{R}$:
+- To denote the derivative of a function $f$, we have the following notations.
 
-- $\sin\theta=y-$coordinate of $P$
+  $$f',f'(x),y',\frac{dy}{dx},\frac{d}{dx}y,\frac{d}{dx}f(x)$$
 
-- $\cos\theta=x-$coordinate of $P$
+- To denote the derivative of $f$ at $x_0$, we have the following notations.
 
-**More trigonometric functions** The tangent, cotangent, secant and cosecant functions are defined as follows:
+  $$f'(x_0),y'(x_0),\left.\frac{dy}{dx}\right|_{x=x_0}$$
+  
+**Caution** $\frac{dy}{dx}$ is not a fraction, but a function in $x$.  
 
-- $\tan x=\frac{\sin x}{\cos x}$
+**Rate of change** The slope of a curve $y=f(x)$ at a point $P(x_0,f(x_0))$  is the rate of change of $y$ with respect to $x$ at $P$. That is, $f'(x_0)$ is the rate of change of $y$ w.r.t. $x$ when $x=x_0$.
 
-- $\cot x=\frac{\cos x}{\sin x}$
+**Prove the following rules of differentiation**
 
-- $\sec x= \frac{1}{\cos x}$
+- **Power Rule for Differentiation (positive integer version)** Let $n$ be a positive integer. Then the power function $x^n$ is differentiate on $\mathbb{R}$ and we have $\frac{d}{dx}x^n=nx^{n-1}$
 
-- $\csc x=\frac{1}{\sin x}$
+- **Product Rule** Let $f$ and $g$ be functions with the same domain. Suppose that $f$ and $g$ are differentiable. Then the function $fg$ is also differentiable. Moreover, we have $\frac{d}{dx}(fg)(x)=g(x)\cdot\frac{d}{dx}f(x)+f(x)\cdot\frac{d}{dx}g(x)$
 
-where the domains are 
+## Derivative of a function
 
-- $\text{dom}(\tan)=\text{dom}(\sec)=\mathbb{R}\backslash\{\pm\frac{\pi}{2},\pm\frac{3\pi}{2},\ldots\}$
+**Derivative** The gradient of the tangent to a curve at a point.
 
-- $\text{dom}(\cot)=\text{dom}(\csc)=\mathbb{R}\backslash\{\pm\pi,\pm2\pi,\ldots\}$
+**Derived function** The rule, $f'$, which gives the gradient of a function $f$ at a general point.
 
-**Properties**
+**Differentiation** The process or operation of determining the first derivative of a function.
 
-1. The sine and cosine functions are periodic with period $2\pi$
+**Tangent** A line that just touches a curve at a point.
 
-2. The tangent function is periodic with period $\pi$.
+**Chord, Secant** A straight line joining two points on a curve.
 
-3. The sine and tangent functions are odd functions and the cosine function is an even function.
+**Notations**
 
-4. The graphs of the sine and tangent functions are symmetric about the origin and the graph of the cosine function is symmetric about the $y$-axis.
+$$f'(x),\frac{dy}{dx}=\lim_{\Delta x\rightarrow 0}\frac{\Delta y}{\Delta x}$$
 
-5. The graph of the cosine function can be otained from that of the since function by moving it $\frac{\pi}{2}$ units to the left.
+## Rules of differentiation
 
-**CAST Rule**
+**The constant rule** Differentiate the function and multiply by the constant. $h(x)=cf(x)$ then $h'(x)=cf'(x)$.
 
-**Sine, Cosine and Tangent of some special angles**
+**The sum rule** Differentiate each function separately and add. $h(x)=f(x)+g(x)$ then $h'(x)=f'(x)+g'(x)$.
 
-**Important identities** 
+**The difference rule** $h(x)=f(x)-g(x)$ then $h'(x)=f'(x)-g'(x)$.
 
-- $\sin^2 x + \cos^2 x=1$
+**Second-order derivative** The gradient of the first-order derivative denoted by $f''(x)$ or $\frac{d^2y}{dx^2}$.
 
-- $1+\tan^2x=\sec^2x$
+**Concave** Graph bends downwards when $f''(x)<0$.
 
-- $\sin(x+\frac{\pi}{2})=\cos x$
+**Convex** Graph bends upwards when $f''(x)>0$.
 
-- $\cos(\pi-x)=-\cos x $
 
-**Compound angle formulas**
+# Applications
 
-- $\sin(A+B)=\sin A\cos B + \cos A\sin B$
 
-- $\cos(A+B)=\cos A\cos B-\sin A\sin B$
 
-**Continuity of sine and cosine** Both of them are continuous on $\mathbb{R}$.
+## Optimization
 
-**Important limits**
+**Optimization** The determination of the optimal points of a function.
 
-- $\underset{x\rightarrow0}{\lim}\frac{\sin x}{x}=1$
+**Stationary points (critical points, turning points, extrema)** Points on a graph at which the tangent is horizontal. At such a point, the first-order derivative is zero.
 
-- $\underset{h\rightarrow0}{\lim}\frac{\cos h-1}{h}=0$
+**Local maximum** A point on a curve which has the highest function value in comparison with other values in its neighbourhood. At such a point, the first-order derivative is zero and the second-order derivative is negative.
 
-## Differentiation of Trigonometric Functions
+**Local minimum** A point on a curve which has the lowest function value in comparison with other values in its neighbourhood. At such a point, the first-order derivative is zero and the second-order derivative is positive.
 
-**Derivative of sine** The sine function is differentiable on $\mathbb{R}$ and its derivative is the cosine function:
-$$\frac{d}{dx}\sin x=\cos x$$
+**Stationary point of inflection** A stationary point that is neither a maximum nor a minimum. At such a point, the first-order derivative is zero and the second-order derivative is zero.
 
-**Derivative of cosine** The cosine function is differentiable on $\mathbb{R}$ and its derivative is the negative of the sine function:
-$$\frac{d}{dx}\cos x=-\sin x$$
+## *Optimization of economic functions*
 
-**Derivative of tangent** The tangent function is differentiable on its domain and its derivative is the square of the secant function, that is,
-$$\frac{d}{dx}\tan x=\sec^2 x,~~~x\neq\pm\frac{\pi}{2},\pm\frac{3\pi}{2},\ldots.$$
+**Average product of labour (labour productivity)** Output per worker. $AQ_L=Q/L$.
 
+**Maximizing profit** If a firm maximizes profit, then $MR=MC$.
+
+**Maximizing average product per labour** If a firm maximizes average product of labour, then $AP_L=MP_L$.
+
+**Economic order quantity** The quantity of a product that should be ordered so as to minimize the total cost that includes ordering costs and holding costs.
+
+## *Marginal functions in economics*
+
+**Monopolist** The only firm in the industry.
+
+**Perfect competition** A situation in which there are no barries to entry in an industry where there are many firms selling an identical product at the market price.
+
+### *Profit* {-}
+
+**Marginal revenue** The extra revenue gained by selling 1 more unit of a good. $MR = \frac{d TR}{dQ}$.
+
+**Average revenue** Total revenue per unit of output. Average revenue curve and demand curve are synonymous.
+
+**Marginal cost** The cost of producing 1 more unit of output. $MC=\frac{dTC}{dQ}$.
+
+### *Production* {-}
+
+**Marginal product of labor** The extra output produced by 1 more unit of labor. $MP_L=\frac{dQ}{dL}$.
+
+**Law of diminishing marginal productivity (Law of diminishing returns)** Once the size of the workforce exceeds a particular value, the increase in output due to 1-unit increase in labor will decline. $\frac{d^2Q}{dL^2}<0$ for sufficiently large $L$.
+
+### *National income* {-}
+
+**Marginal propensity to consume** The fraction of a rise in national income which goes into consumption. $MPC=\frac{dC}{dY}$.
+
+**Marginal propensity to save** The fraction of a rise in national income which goes into savings. $MPS=\frac{dS}{dY}$.
+
+
+## *Elasticity*
+
+**Price elasticity of demand** A measure of the relative change in demand due to a relative change in price. 
+
+**Price elasticity of supply** A measure of the relative change in supply due to a relative change in price.
+
+**Arc elasticity** Elasticity measured by a chord on a curve.
+
+**Point elasticity** Elasticity measured by a tangent on a curve, defined as $E=\frac{p}{Q}\times\frac{dQ}{dP}$.
+
+**Elastic (inelastic/unit elastic) demand** When the relative change in demand is more (less/same) than the corresponding relative change in price, i.e., $E>1 (E<1/E=1)$.
+
+**Derivative of an inverse function** Given $y=f(x)$ and its inverse function $x=f^{-1}(y)=h(y)$. The derivative of the inverse function $f^{-1}(y)$ is the reciprocal of the derivative of the original function. $\frac{dx}{dy}=h'(y)=\frac{1}{dy/dx}=\frac{1}{f'(x)}$.
 
